all.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: bike-frame
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: bike-frame
        version: bike-frame-v1
    spec:
      containers:
        - name: bike-frame-v1
          image: quay.io/deployhub/bike-frame:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: bike-front-wheel
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: bike-front-wheel
        version: bike-front-wheel-v1
    spec:
      containers:
        - name: bike-front-wheel-v1
          image: quay.io/deployhub/bike-front-wheel:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: bike-frontend
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: bike-frontend
        version: bike-frontend-v1
    spec:
      containers:
        - name: bike-frontend-v1
          image: quay.io/deployhub/bike-frontend:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: bike-login
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: bike-login
        version: bike-login-v1
    spec:
      containers:
        - name: bike-login-v1
          image: quay.io/deployhub/bike-login:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: bike-rear-wheel
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: bike-rear-wheel
        version: bike-rear-wheel-v1
    spec:
      containers:
        - name: bike-rear-wheel-v1
          image: quay.io/deployhub/bike-rear-wheel:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: bike-seat
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: bike-seat
        version: bike-seat-v1
    spec:
      containers:
        - name: bike-seat-v1
          image: quay.io/deployhub/bike-seat:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: bike-frame
spec:
  selector:
    app: bike-frame
  ports:
    - name: http
      port: 80
---
kind: Service
apiVersion: v1
metadata:
  name: bike-front-wheel
spec:
  selector:
    app: bike-front-wheel
  ports:
    - name: http
      port: 80
---
kind: Service
apiVersion: v1
metadata:
  name: bike-frontend
spec:
  selector:
    app: bike-frontend
  ports:
    - name: http
      port: 80
---
kind: Service
apiVersion: v1
metadata:
  name: bike-login
spec:
  selector:
    app: bike-login
  ports:
    - name: http
      port: 80
---
kind: Service
apiVersion: v1
metadata:
  name: bike-rear-wheel
spec:
  selector:
    app: bike-rear-wheel
  ports:
    - name: http
      port: 80
---
kind: Service
apiVersion: v1
metadata:
  name: bike-seat
spec:
  selector:
    app: bike-seat
  ports:
    - name: http
      port: 80
---
