testit.yaml
---
# Source: BikeWorks/templates/destination-rule.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: bike-frame
spec:
  host: bike-frame
  subsets:
  - name: version-1
    labels:
      version: yellow
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: bike-front-wheel
spec:
  host: bike-front-wheel
  subsets:
  - name: version-1
    labels:
      version: yellow
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: bike-rear-wheel
spec:
  host: bike-rear-wheel
  subsets:
  - name: version-1
    labels:
      version: yellow
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: bike-seat
spec:
  host: bike-seat
  subsets:
  - name: version-1
    labels:
      version: black
  - name: version-2
    labels:
      version: yellow
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: bike-login
spec:
  host: bike-login
  subsets:
  - name: version-1
    labels:
      version: master
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: bike-frontend
spec:
  host: bike-frontend
  subsets:
  - name: version-1
    labels:
      version: master
---

---
# Source: BikeWorks/templates/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: bikeinfo-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
# Source: BikeWorks/templates/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bikeinfo
spec:
  hosts:
    - "*"
  gateways:
    - bikeinfo-gateway
  http:
  - match:
    - uri:
        prefix: '/features'      
    route:
    - destination:
        host: bike-login
        subset: version-1
  - match:
    - uri:
        prefix: '/users'      
    route:
    - destination:
        host: bike-login
        subset: version-1
  - match:
    - uri:
        prefix: '/getbikeframe'      
    route:
    - destination:
        host: bike-frame
        subset: version-1
  - match:
    - uri:
        prefix: '/getbikefrontwheel'      
    route:
    - destination:
        host: bike-front-wheel
        subset: version-1  
  - match:
    - uri:
        prefix: '/getbikerearwheel'      
    route:
    - destination:
        host: bike-rear-wheel
        subset: version-1
  - match:
    - uri:
        prefix: '/getbikeseat'      
      headers:
        x-Feature-Set:
          regex: "Yellow Jacket"
    route:
    - destination:
        host: bike-seat
        subset: version-2
  - match:
    - uri:
        prefix: '/getbikeseat'      
      headers:
        x-Feature-Set:
          regex: "BumbleBee"
    route:
    - destination:
        host: bike-seat
        subset: version-1
  - match:
    - uri:
        regex: '.*'      
    route:
    - destination:
        host: bike-frontend
        subset: version-1
---
